﻿2015-xx-xx
  better data (thank to Elisa Sani)
    organic/C2H6O2 - ethylene glycol/Sani.yml
  removed data (dispersion formulae for select ranges from Sani.yml; Sani1.yml formula for vis/NIR is also included in Sani_and_Otanicar.yml)
    organic/C2H6O2 - ethylene glycol/Sani1.yml
    organic/C2H6O2 - ethylene glycol/Sani2.yml
  new data (thanks to Mikael Malmström)
    main/Ta2O5/Bright-amorphous.yml
    main/Ta2O5/Bright-nanocrystalline.yml
    main/Si/Chandler-Horowitz.yml
  bug fixes
    corrected misspelled McPeak name in libraty.yml
	fixed dispersion formula in main/LiIO3/Herbst-o.yml.yml (thanks to Jiaan Zheng, DESY, Hamburg, Germany)
    fixed missing "tabulated k" headers in glass/schott/obsolete/LAKL12.yml and LASFN9.yml (thanks to Thibault North)
  other
    library.yml: ' - ' replaced by ': ' in page names

2015-08-18
  !!! version to be uploaded on GitHub !!!
  new data (thanks to Juan I. Larruquert, Instituto de Optica, Madrid, Spain for providing numerical data)
    main/B4C/Larruquert.yml
    main/Ca/Rodriguez-de Marcos.yml
    main/SiC/Larruquert.yml
    main/SrF2/Rodriguez-de Marcos.yml
    main/Sr/Rodriguez-de Marcos.yml
    main/C/Larruquert.yml
  bug fixes
    corrected publication date of main/Ho/Fernandez-Perea.yml data in library.yml (2008->2011)
    main/Tm/Garcia-Cortes.yml renamed to main/Tm/Vidal-Dasilva.yml; Record in library.yml updated accordingly
    removed legacy main/C/Amorphous.yml

2015-07-05
  new data (thanks to Kevin McPeak, ETH Zürich, Switzerland for providing data in yaml format!)
    main/Ag/McPeak.yml
    main/Al/McPeak.yml
    main/Au/McPeak.yml
    main/Cu/McPeak.yml
  new data (thanks to Piers Barnes, Imperial College London, UK, for providing data in yaml format!)
    other/perovskite/CH3NH3PbI3/Leguy.yml
    other/perovskite/CH3NH3PbI3/Leguy-hydrated.yml
  new data
    main/Rh/Coulter-40.yml
    main/Rh/Coulter-300.yml
    main/Rh/Arndt.yml
    main/Rh/Weaver.yml
    main/Sc2O3/Arndt.yml