@@ -1,0 +1,595 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "L. J. Phillips, A. M. Rashed, R. E. Treharne, J. Kay, P. Yates, I. Mitrovic, A. Weerakkody, S. Hall, K. Durose, Dispersion relation data for methylammonium lead triiodide perovskite deposited on a (100) silicon wafer using a two-step vapour-phase reaction processs, <a href=\"http://dx.doi.org/10.1016/j.dib.2015.10.026\"><i>Data in Brief</i> <b>5</b>, 926-928 (2015)</a>"
+COMMENTS: "A MAPI film was deposited onto a silicon wafer using a two-step vapour reaction phase process and a variable-angle ellipsometer used to take amplitude and phase change measurements. The refractive index and extinction coefficient was extracted from a multi-oscillator model fit to the ellipsometry data, as a function of wavelength, from 300 to 1500 nm"
+DATA:
+  - type: tabulated nk
+    data: |
+        0.300009583 1.980725 0.559247
+        0.301600861 1.974124 0.563854
+        0.303192139 1.967736 0.569127
+        0.304783417 1.961613 0.575073
+        0.306374725 1.955809 0.581694
+        0.307966034 1.950383 0.588987
+        0.309557373 1.945394 0.596945
+        0.311148682 1.940905 0.605554
+        0.312740051 1.93698 0.614791
+        0.31433136 1.933684 0.624628
+        0.31592276 1.931082 0.635029
+        0.317514099 1.929235 0.645949
+        0.319105499 1.928204 0.657335
+        0.320696869 1.928045 0.669125
+        0.322288269 1.928809 0.681251
+        0.323879669 1.93054 0.693637
+        0.325471069 1.933274 0.706198
+        0.3270625 1.937041 0.718846
+        0.3286539 1.941856 0.731488
+        0.330245331 1.947729 0.744029
+        0.331836792 1.954655 0.756369
+        0.333428223 1.96262 0.768411
+        0.335019684 1.971599 0.780059
+        0.336611145 1.981552 0.791219
+        0.338202576 1.992435 0.801804
+        0.339794037 2.00419 0.81173
+        0.341385529 2.016751 0.820922
+        0.34297699 2.030045 0.829312
+        0.344568481 2.043994 0.836844
+        0.346159973 2.058512 0.843467
+        0.347751434 2.073511 0.849143
+        0.349342957 2.088903 0.853845
+        0.350934418 2.104595 0.857552
+        0.35252594 2.120497 0.860258
+        0.354117401 2.136519 0.861963
+        0.355708923 2.152577 0.862678
+        0.357300415 2.168585 0.86242
+        0.358891907 2.184467 0.861216
+        0.360483429 2.200149 0.859098
+        0.362074921 2.215562 0.856105
+        0.363666443 2.230647 0.852282
+        0.365257965 2.245347 0.847674
+        0.366849457 2.259614 0.842334
+        0.368440979 2.273406 0.836315
+        0.370032471 2.286687 0.829672
+        0.371623962 2.299428 0.82246
+        0.373215485 2.311604 0.814735
+        0.374806976 2.323199 0.806553
+        0.376398499 2.3342 0.797967
+        0.37798999 2.3446 0.789031
+        0.379581482 2.354396 0.779796
+        0.381173004 2.363589 0.770311
+        0.382764465 2.372183 0.760621
+        0.384355988 2.380188 0.750771
+        0.385947449 2.387614 0.740803
+        0.387538971 2.394474 0.730753
+        0.389130432 2.400784 0.720658
+        0.390721924 2.40656 0.71055
+        0.392313416 2.411821 0.70046
+        0.393904846 2.416587 0.690414
+        0.395496338 2.420877 0.680437
+        0.397087799 2.424712 0.670551
+        0.39867926 2.428113 0.660776
+        0.400270691 2.431102 0.651129
+        0.401862122 2.433697 0.641626
+        0.403453583 2.435922 0.63228
+        0.405045013 2.437796 0.623103
+        0.406636414 2.439338 0.614104
+        0.408227844 2.440569 0.605292
+        0.409819275 2.441508 0.596673
+        0.411410706 2.442172 0.588255
+        0.413002045 2.44258 0.58004
+        0.414593445 2.442749 0.572033
+        0.416184814 2.442694 0.564235
+        0.417776215 2.442431 0.55665
+        0.419367584 2.441976 0.549276
+        0.420958923 2.441343 0.542116
+        0.422550232 2.440545 0.535168
+        0.424141602 2.439595 0.528432
+        0.42573291 2.438505 0.521906
+        0.427324219 2.437287 0.515589
+        0.428915527 2.435952 0.509478
+        0.430506836 2.434511 0.503572
+        0.432098083 2.432974 0.497867
+        0.433689362 2.431349 0.492362
+        0.435280609 2.429646 0.487052
+        0.436871887 2.427873 0.481936
+        0.438463135 2.426039 0.477009
+        0.440054352 2.42415 0.472269
+        0.441645569 2.422214 0.467712
+        0.443236725 2.420238 0.463335
+        0.444827942 2.418229 0.459134
+        0.446419098 2.416191 0.455107
+        0.448010254 2.414132 0.451248
+        0.449601379 2.412056 0.447556
+        0.451192535 2.40997 0.444026
+        0.4527836 2.407877 0.440655
+        0.454374695 2.405784 0.43744
+        0.455965759 2.403693 0.434377
+        0.457556824 2.401611 0.431462
+        0.459147888 2.399539 0.428693
+        0.460738922 2.397485 0.426066
+        0.462329987 2.395449 0.423578
+        0.463920959 2.393437 0.421225
+        0.465511963 2.391452 0.419003
+        0.467102875 2.389497 0.416911
+        0.468693848 2.387576 0.414944
+        0.47028476 2.385691 0.413099
+        0.471875671 2.383846 0.411372
+        0.473466614 2.382044 0.409762
+        0.475057465 2.380287 0.408263
+        0.476648346 2.378578 0.406874
+        0.478239166 2.37692 0.405591
+        0.479829987 2.375316 0.40441
+        0.481420746 2.373767 0.403328
+        0.483011566 2.372276 0.402342
+        0.484602295 2.370846 0.401449
+        0.486193054 2.369478 0.400646
+        0.487783752 2.368175 0.399928
+        0.489374451 2.366938 0.399293
+        0.490965149 2.36577 0.398738
+        0.492555756 2.364672 0.398258
+        0.494146393 2.363646 0.397851
+        0.495737 2.362694 0.397513
+        0.497327576 2.361817 0.397241
+        0.498918152 2.361017 0.39703
+        0.500508698 2.360294 0.396879
+        0.502099213 2.359651 0.396782
+        0.503689697 2.359088 0.396737
+        0.505280182 2.358607 0.396739
+        0.506870605 2.358208 0.396786
+        0.508461029 2.357892 0.396873
+        0.510051422 2.35766 0.396997
+        0.511641785 2.357512 0.397155
+        0.513232117 2.35745 0.397342
+        0.514822449 2.357472 0.397555
+        0.51641272 2.357579 0.39779
+        0.518003052 2.357772 0.398043
+        0.519593262 2.358051 0.398312
+        0.521183472 2.358414 0.398591
+        0.522773682 2.358863 0.398878
+        0.524363831 2.359396 0.399168
+        0.525953979 2.360013 0.399459
+        0.527544067 2.360712 0.399746
+        0.529134155 2.361494 0.400026
+        0.530724182 2.362358 0.400296
+        0.532314209 2.363301 0.400551
+        0.533904175 2.364323 0.40079
+        0.535494141 2.365423 0.401007
+        0.537084106 2.366598 0.4012
+        0.53867395 2.367848 0.401366
+        0.540263855 2.36917 0.401502
+        0.541853699 2.370563 0.401604
+        0.543443481 2.372024 0.401669
+        0.545033325 2.373551 0.401695
+        0.546623047 2.375143 0.40168
+        0.548212769 2.376796 0.401619
+        0.549802429 2.378509 0.401511
+        0.55139209 2.380278 0.401354
+        0.552981689 2.382102 0.401145
+        0.554571289 2.383976 0.400881
+        0.556160828 2.3859 0.400561
+        0.557750366 2.387868 0.400183
+        0.559339844 2.38988 0.399746
+        0.560929321 2.391931 0.399247
+        0.562518677 2.394019 0.398684
+        0.564108093 2.39614 0.398058
+        0.565697449 2.398291 0.397366
+        0.567286743 2.40047 0.396608
+        0.568876099 2.402672 0.395782
+        0.570465271 2.404895 0.394888
+        0.572054565 2.407135 0.393925
+        0.573643677 2.40939 0.392893
+        0.575232788 2.411656 0.391792
+        0.576821899 2.413929 0.390621
+        0.578411011 2.416207 0.38938
+        0.580000061 2.418486 0.38807
+        0.581588989 2.420763 0.38669
+        0.583177979 2.423036 0.385242
+        0.584766907 2.4253 0.383725
+        0.586355774 2.427554 0.382141
+        0.58794458 2.429793 0.38049
+        0.589533386 2.432016 0.378774
+        0.591122192 2.434219 0.376992
+        0.592710876 2.436399 0.375147
+        0.594299561 2.438554 0.37324
+        0.595888245 2.440682 0.371271
+        0.597476807 2.442779 0.369244
+        0.599065369 2.444843 0.367159
+        0.600653931 2.446873 0.365017
+        0.602242371 2.448865 0.362821
+        0.603830811 2.450817 0.360573
+        0.605419189 2.452729 0.358275
+        0.607007568 2.454597 0.355927
+        0.608595886 2.456419 0.353534
+        0.610184143 2.458194 0.351096
+        0.611772339 2.459921 0.348616
+        0.613360535 2.461598 0.346097
+        0.61494873 2.463223 0.343539
+        0.616536804 2.464796 0.340947
+        0.618124878 2.466314 0.338322
+        0.619712891 2.467777 0.335666
+        0.621300842 2.469184 0.332983
+        0.622888794 2.470535 0.330274
+        0.624476685 2.471827 0.327542
+        0.626064453 2.473061 0.324789
+        0.627652222 2.474236 0.322018
+        0.62923999 2.475352 0.319232
+        0.630827698 2.476408 0.316433
+        0.632415344 2.477404 0.313623
+        0.63400293 2.478341 0.310805
+        0.635590515 2.479217 0.307981
+        0.63717804 2.480033 0.305154
+        0.638765503 2.480789 0.302327
+        0.640352905 2.481486 0.299501
+        0.641940247 2.482123 0.29668
+        0.643527588 2.482701 0.293865
+        0.645114868 2.483222 0.291059
+        0.646702026 2.483684 0.288265
+        0.648289246 2.484089 0.285484
+        0.649876343 2.484438 0.282719
+        0.65146344 2.484732 0.279972
+        0.653050415 2.484971 0.277246
+        0.65463739 2.485157 0.274543
+        0.656224365 2.48529 0.271865
+        0.657811218 2.485372 0.269214
+        0.659398071 2.485404 0.266592
+        0.660984802 2.485387 0.264002
+        0.662571533 2.485323 0.261445
+        0.664158203 2.485214 0.258923
+        0.665744812 2.485059 0.25644
+        0.66733136 2.484863 0.253996
+        0.668917847 2.484625 0.251594
+        0.670504333 2.484348 0.249235
+        0.672090698 2.484033 0.246922
+        0.673677124 2.483683 0.244656
+        0.675263367 2.4833 0.242441
+        0.676849609 2.482886 0.240276
+        0.678435791 2.482443 0.238165
+        0.680021912 2.481973 0.236109
+        0.681608032 2.481479 0.234111
+        0.683194031 2.480963 0.232171
+        0.684779968 2.480428 0.230293
+        0.686365906 2.479878 0.228478
+        0.687951782 2.479315 0.226727
+        0.689537537 2.478742 0.225043
+        0.691123291 2.478162 0.223427
+        0.692708984 2.47758 0.221882
+        0.694294617 2.477 0.220409
+        0.695880188 2.476424 0.219011
+        0.697465698 2.475859 0.217688
+        0.699051147 2.475308 0.216444
+        0.700636597 2.474776 0.215279
+        0.702221863 2.47427 0.214195
+        0.70380719 2.473794 0.213194
+        0.705392395 2.473356 0.212277
+        0.706977539 2.472963 0.211446
+        0.708562622 2.472621 0.210701
+        0.710147705 2.47234 0.210045
+        0.711732666 2.472128 0.209476
+        0.713317627 2.471994 0.208995
+        0.714902466 2.471951 0.208603
+        0.716487244 2.472008 0.208297
+        0.718072021 2.472178 0.208076
+        0.719656677 2.472476 0.207936
+        0.721241333 2.472915 0.207874
+        0.722825806 2.473513 0.207884
+        0.724410339 2.474286 0.207959
+        0.725994751 2.475253 0.208087
+        0.727579163 2.476432 0.208258
+        0.729163452 2.477845 0.208454
+        0.730747681 2.479512 0.208657
+        0.732331848 2.481455 0.208842
+        0.733915955 2.483694 0.20898
+        0.7355 2.486249 0.209035
+        0.737083984 2.489137 0.208967
+        0.738667847 2.492372 0.208726
+        0.74025177 2.495962 0.208256
+        0.741835571 2.499907 0.207495
+        0.74341925 2.504196 0.206372
+        0.745002869 2.508806 0.204811
+        0.746586487 2.513699 0.202735
+        0.748170044 2.518816 0.200064
+        0.749753479 2.524078 0.196726
+        0.751336853 2.529388 0.192658
+        0.752920166 2.534625 0.187815
+        0.754503418 2.539654 0.182174
+        0.756086609 2.544327 0.175745
+        0.757669739 2.548496 0.168569
+        0.759252808 2.552018 0.160726
+        0.760835754 2.554768 0.152328
+        0.76241864 2.55665 0.143515
+        0.764001465 2.557602 0.134448
+        0.76558429 2.557601 0.125295
+        0.767166931 2.556664 0.116223
+        0.768749573 2.554842 0.107384
+        0.770332153 2.552217 0.098909
+        0.771914673 2.548889 0.090901
+        0.773497009 2.544971 0.083437
+        0.775079407 2.540579 0.076563
+        0.776661682 2.535826 0.070301
+        0.778243835 2.530818 0.064653
+        0.779825989 2.525647 0.059601
+        0.781408081 2.520396 0.055117
+        0.782990051 2.515131 0.051164
+        0.78457196 2.509908 0.047702
+        0.786153809 2.504771 0.044687
+        0.787735535 2.499754 0.042075
+        0.789317261 2.494883 0.039824
+        0.790898865 2.490176 0.037894
+        0.792480408 2.485646 0.036248
+        0.79406189 2.481303 0.034853
+        0.79564325 2.477154 0.033679
+        0.797224548 2.473204 0.032697
+        0.798805786 2.469462 0.031884
+        0.800387024 2.465956 0.031213
+        0.801968079 2.462691 0.030588
+        0.803549072 2.459595 0.029977
+        0.805130005 2.456638 0.029381
+        0.806710876 2.453797 0.0288
+        0.808291626 2.45106 0.028234
+        0.809872375 2.448415 0.027681
+        0.811453003 2.445852 0.027144
+        0.813033569 2.443365 0.02662
+        0.814614014 2.440947 0.02611
+        0.816194458 2.438592 0.025615
+        0.81777478 2.436297 0.025132
+        0.81935498 2.434057 0.024663
+        0.820935181 2.431869 0.024207
+        0.822515259 2.429729 0.023764
+        0.824095215 2.427635 0.023333
+        0.82567511 2.425584 0.022915
+        0.827255005 2.423574 0.022509
+        0.828834656 2.421604 0.022115
+        0.830414368 2.419671 0.021732
+        0.831993958 2.417773 0.021361
+        0.833573425 2.41591 0.021001
+        0.835152954 2.414079 0.020652
+        0.836732239 2.412279 0.020314
+        0.838311523 2.41051 0.019986
+        0.839890747 2.40877 0.019669
+        0.841469849 2.407058 0.019361
+        0.843048828 2.405373 0.019064
+        0.844627747 2.403714 0.018776
+        0.846206543 2.402081 0.018497
+        0.847785339 2.400472 0.018227
+        0.849364075 2.398888 0.017967
+        0.850942566 2.397326 0.017715
+        0.852521118 2.395787 0.017472
+        0.854099487 2.394271 0.017238
+        0.855677856 2.392776 0.017011
+        0.857256165 2.391301 0.016792
+        0.85883429 2.389847 0.016582
+        0.860412415 2.388413 0.016378
+        0.861990356 2.386998 0.016183
+        0.863568237 2.385602 0.015994
+        0.865146118 2.384225 0.015813
+        0.866723816 2.382866 0.015638
+        0.868301453 2.381525 0.01547
+        0.869879028 2.3802 0.015309
+        0.871456421 2.378893 0.015154
+        0.873033875 2.377603 0.015006
+        0.874611145 2.376329 0.014863
+        0.876188354 2.375071 0.014727
+        0.877765442 2.373829 0.014596
+        0.879342468 2.372602 0.014471
+        0.880919434 2.37139 0.014351
+        0.882496277 2.370193 0.014237
+        0.884073059 2.369011 0.014128
+        0.885649719 2.367843 0.014024
+        0.887226257 2.366689 0.013925
+        0.888802734 2.365549 0.013831
+        0.890379089 2.364422 0.013741
+        0.891955383 2.363309 0.013656
+        0.893531555 2.362209 0.013576
+        0.895107727 2.361122 0.013499
+        0.896683716 2.360047 0.013427
+        0.898259644 2.358985 0.013359
+        0.899835449 2.357936 0.013296
+        0.901411255 2.356898 0.013236
+        0.902986816 2.355873 0.013179
+        0.904562378 2.354859 0.013127
+        0.906137817 2.353857 0.013078
+        0.907713196 2.352865 0.013032
+        0.909288452 2.351886 0.01299
+        0.910863647 2.350917 0.012951
+        0.91243866 2.349959 0.012915
+        0.914013672 2.349012 0.012882
+        0.915588562 2.348076 0.012852
+        0.917163391 2.347149 0.012826
+        0.918737976 2.346233 0.012802
+        0.920312622 2.345328 0.01278
+        0.921887085 2.344432 0.012762
+        0.923461548 2.343546 0.012746
+        0.925035828 2.342669 0.012732
+        0.926609985 2.341802 0.012721
+        0.928184082 2.340945 0.012712
+        0.929758118 2.340096 0.012706
+        0.931332031 2.339257 0.012702
+        0.932905762 2.338427 0.0127
+        0.934479492 2.337606 0.0127
+        0.936053101 2.336793 0.012702
+        0.937626648 2.33599 0.012706
+        0.939200012 2.335194 0.012711
+        0.940773315 2.334407 0.012719
+        0.942346497 2.333629 0.012728
+        0.943919617 2.332858 0.01274
+        0.945492554 2.332096 0.012752
+        0.947065552 2.331342 0.012767
+        0.948638306 2.330595 0.012783
+        0.95021106 2.329856 0.0128
+        0.951783569 2.329125 0.012819
+        0.953356079 2.328401 0.012839
+        0.954928528 2.327685 0.012861
+        0.956500793 2.326976 0.012883
+        0.958072937 2.326274 0.012908
+        0.95964502 2.32558 0.012933
+        0.96121698 2.324893 0.012959
+        0.962788879 2.324212 0.012987
+        0.964360657 2.323538 0.013016
+        0.965932251 2.322872 0.013045
+        0.967503784 2.322212 0.013076
+        0.969075317 2.321558 0.013108
+        0.970646606 2.320911 0.01314
+        0.972217896 2.320271 0.013174
+        0.97378894 2.319636 0.013208
+        0.975359985 2.319009 0.013243
+        0.976930847 2.318387 0.013279
+        0.978501648 2.317771 0.013315
+        0.980072388 2.317162 0.013353
+        0.981642944 2.316558 0.013391
+        0.983213501 2.31596 0.013429
+        0.984783813 2.315369 0.013469
+        0.986354126 2.314782 0.013509
+        0.987924194 2.314202 0.013549
+        0.989494324 2.313627 0.01359
+        0.99106427 2.313058 0.013631
+        0.992634094 2.312494 0.013673
+        0.994203796 2.311935 0.013716
+        0.995773315 2.311382 0.013759
+        0.997342896 2.310834 0.013802
+        0.998912292 2.310292 0.013846
+        1.01227179 2.305872 0.01423
+        1.015750671 2.304777 0.014333
+        1.019227905 2.303704 0.014436
+        1.022703796 2.302654 0.014541
+        1.026178101 2.301624 0.014645
+        1.029650879 2.300615 0.01475
+        1.033122314 2.299626 0.014855
+        1.036592285 2.298657 0.01496
+        1.040060791 2.297707 0.015065
+        1.043527832 2.296775 0.01517
+        1.04699353 2.295861 0.015274
+        1.050457886 2.294965 0.015378
+        1.053920776 2.294086 0.015481
+        1.057382446 2.293223 0.015584
+        1.060842651 2.292377 0.015685
+        1.064301514 2.291547 0.015787
+        1.067759155 2.290732 0.015887
+        1.071215576 2.289932 0.015986
+        1.074670532 2.289146 0.016084
+        1.078124268 2.288375 0.016182
+        1.081576904 2.287617 0.016278
+        1.085028076 2.286874 0.016373
+        1.088478149 2.286143 0.016467
+        1.091927002 2.285425 0.01656
+        1.095374634 2.28472 0.016651
+        1.098821045 2.284027 0.016741
+        1.102266357 2.283346 0.01683
+        1.105710571 2.282676 0.016918
+        1.109153564 2.282018 0.017004
+        1.112595459 2.281372 0.017089
+        1.116036133 2.280735 0.017172
+        1.11947583 2.28011 0.017254
+        1.122914429 2.279494 0.017335
+        1.126352051 2.278889 0.017414
+        1.129788452 2.278294 0.017492
+        1.133223877 2.277708 0.017569
+        1.136658447 2.277131 0.017644
+        1.140091919 2.276564 0.017718
+        1.143524292 2.276005 0.01779
+        1.146955811 2.275455 0.01786
+        1.15038623 2.274914 0.01793
+        1.153815796 2.274381 0.017998
+        1.157244385 2.273857 0.018064
+        1.160672119 2.27334 0.018129
+        1.164098999 2.27283 0.018193
+        1.167524902 2.272329 0.018255
+        1.170949951 2.271835 0.018316
+        1.174374146 2.271348 0.018375
+        1.177797485 2.270868 0.018433
+        1.181219971 2.270396 0.01849
+        1.184641724 2.269929 0.018545
+        1.188062622 2.26947 0.018599
+        1.191482666 2.269017 0.018651
+        1.1949021 2.26857 0.018703
+        1.198320557 2.26813 0.018752
+        1.201738525 2.267695 0.018801
+        1.205155518 2.267267 0.018848
+        1.208572021 2.266844 0.018894
+        1.211987671 2.266427 0.018939
+        1.21540271 2.266016 0.018982
+        1.218817139 2.26561 0.019024
+        1.222230713 2.265209 0.019065
+        1.225643799 2.264814 0.019105
+        1.229056396 2.264424 0.019143
+        1.23246814 2.264038 0.01918
+        1.235879395 2.263658 0.019216
+        1.239290039 2.263282 0.019251
+        1.242700073 2.262911 0.019285
+        1.246109619 2.262545 0.019317
+        1.249518677 2.262183 0.019349
+        1.252927002 2.261826 0.019379
+        1.256335083 2.261472 0.019408
+        1.259742432 2.261124 0.019436
+        1.263149536 2.260779 0.019464
+        1.26655603 2.260438 0.019489
+        1.269962158 2.260102 0.019514
+        1.273367798 2.259769 0.019538
+        1.276772949 2.25944 0.019561
+        1.280177856 2.259115 0.019583
+        1.283582275 2.258793 0.019604
+        1.286986206 2.258476 0.019624
+        1.290389893 2.258161 0.019643
+        1.293793213 2.25785 0.019661
+        1.297196289 2.257543 0.019678
+        1.300598999 2.257239 0.019694
+        1.304001343 2.256938 0.019709
+        1.307403564 2.25664 0.019723
+        1.310805298 2.256346 0.019737
+        1.314206787 2.256055 0.019749
+        1.317608154 2.255766 0.019761
+        1.321009277 2.255481 0.019771
+        1.324410156 2.255198 0.019781
+        1.327810791 2.254919 0.019791
+        1.331211304 2.254642 0.019799
+        1.334611572 2.254368 0.019807
+        1.338011719 2.254097 0.019813
+        1.341411865 2.253828 0.019819
+        1.344811646 2.253562 0.019825
+        1.348211426 2.253299 0.019829
+        1.351611084 2.253038 0.019833
+        1.355010742 2.252779 0.019836
+        1.358410278 2.252523 0.019838
+        1.361809692 2.25227 0.01984
+        1.365209106 2.252018 0.019841
+        1.368608521 2.251769 0.019841
+        1.372007935 2.251523 0.01984
+        1.375407349 2.251278 0.019839
+        1.378806763 2.251036 0.019837
+        1.382206177 2.250795 0.019835
+        1.385605713 2.250557 0.019832
+        1.389005127 2.250321 0.019828
+        1.392404785 2.250087 0.019824
+        1.395804443 2.249855 0.019819
+        1.399204346 2.249625 0.019814
+        1.402604248 2.249397 0.019808
+        1.406004395 2.249171 0.019801
+        1.409404541 2.248946 0.019794
+        1.412804932 2.248724 0.019786
+        1.416205566 2.248503 0.019778
+        1.419606323 2.248284 0.019769
+        1.423007324 2.248067 0.01976
+        1.426408447 2.247851 0.01975
+        1.429809937 2.247637 0.019739
+        1.43321167 2.247425 0.019729
+        1.436613525 2.247214 0.019717
+        1.440015869 2.247005 0.019705
+        1.443418335 2.246798 0.019693
+        1.446821167 2.246592 0.01968
+        1.450224365 2.246387 0.019667
+        1.45362793 2.246185 0.019653
+        1.457031738 2.245983 0.019639
+        1.460436035 2.245783 0.019625
+        1.463840576 2.245584 0.01961
+        1.467245605 2.245387 0.019594
+        1.470651123 2.245192 0.019578
+        1.474056885 2.244997 0.019562
+        1.477463135 2.244804 0.019545
+        1.480869873 2.244612 0.019528
+        1.4842771 2.244421 0.019511
+        1.487684814 2.244232 0.019493
+        1.491093018 2.244044 0.019475
+        1.494501831 2.243857 0.019456
+        1.497911133 2.243672 0.019437
+        1.501320923 2.243487 0.019418
